--- a/A simple webpage/index.html
+++ b/A simple webpage/index.html
@@ -20,28 +20,26 @@
         object-fit: cover;
       }
       .menu {
-        background-color: gray;
+        background-color: #807490;
         height: 50px;
       }
       .text {
         color: #000;
         font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
       }
     </style>
   </head>
   <body>
     <h1>Welcome to this Simple Gallery</h1>
     <nav>
-      <table style="width: 100%" ; margin:auto;>
+      <table style="width: 80%" ; margin:auto; align="center">
         <tr>
           <th class="menu">
-            <a href=""><p class="text">About Us</p></a>
+            <a href="#"><p class="text">Pictures</p></a>
           </th>
           <th class="menu">
-            <a href=""><p class="text">More Pictures</p></a>
-          </th>
-          <th class="menu">
-            <a href=""><p class="text">Contact Us</p></a>
+            <a href="/about.html"><p class="text">About Us</p></a>
           </th>
         </tr>
       </table>
